examples/test/testpolicy4401.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4401
  namespace: namespace143
spec:
  podSelector:
    matchLabels:
      key32: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value23
          key26: value24
      podSelector:
        matchLabels:
          key8: value33
          key34: value22
          key11: value20
